--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name=Sub-Spec-Wrapper
-version=0.02
+version=0.03
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
@@ -35,6 +35,7 @@ install_command=cpanm -n .
 Test::More=0.96
 ; for runtime
 perl=5.010000
+Data::Dump::OneLine=0
 Log::Any=0
 ; speficy which version of spec we're following
 Sub::Spec=1.0.1
