--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name=Sub-Spec-Wrapper
-version=0.03
+version=0.04
 author=Steven Haryanto <stevenharyanto@gmail.com>
 license=Perl_5
 copyright_holder=Steven Haryanto
@@ -39,6 +39,7 @@ Data::Dump::OneLine=0
 Log::Any=0
 ; speficy which version of spec we're following
 Sub::Spec=1.0.1
+Sub::Spec::ConvertArgs::Array=0
 
 [Run::Release]
 ;notexist_fatal = 0
